Fix RMI communication issue, make many model classes serializable
Fix Match.setupDeck() visible cards issue, fix PlayerControllerRMI.someonePlayedCard() issue

Fix Match.proposeSecretObjective() and setSecreObjective() for remote connection